--- a/susy/css/style.css
+++ b/susy/css/style.css
@@ -4,9 +4,11 @@
 }
 
 body {
-	/*
-	background: black;
-	color: white;
-	*/
 	font-size: 16px;
+}
+
+#wrapper {
+	width: 95%;
+	max-width: 1280px;
+	background: #ececec;
 }
